--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "fe81752a",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "id": "4035b09c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en_treebanks = ['en_esl', 'en_ewt', 'en_gum', 'en_gumreddit', 'en_lines', 'en_partut', 'en_pronouns', 'en_pud']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "1d5ac94c",
    "metadata": {},
    "outputs": [
@@ -117,13 +127,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset universal_dependencies/en_lines to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_lines/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7...\n"
+      "Downloading and preparing dataset universal_dependencies/en_esl to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_esl/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e75125e58e284fca9fec13fa27af367e",
+       "model_id": "56e3f0e3be504d3e97fd11f78de89760",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,12 +147,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b00f6a752e85413abd2ce65d65c07145",
+       "model_id": "95996e53445c4646a310228e7591057f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Downloading data:   0%|          | 0.00/580k [00:00<?, ?B/s]"
+       "Downloading data:   0%|          | 0.00/340k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -151,12 +161,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85328bbf465b4bf49ec55ebd1a1d8fb4",
+       "model_id": "86dd05f934d345c4a6af32568ac665f8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Downloading data:   0%|          | 0.00/199k [00:00<?, ?B/s]"
+       "Downloading data:   0%|          | 0.00/42.8k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -165,12 +175,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d6b0a3b957f4c17aaaaa33e6c7f6fd5",
+       "model_id": "6f7a2a6cff4148a6ba224aab91ade77c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Downloading data:   0%|          | 0.00/181k [00:00<?, ?B/s]"
+       "Downloading data:   0%|          | 0.00/43.1k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -179,7 +189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6a6e21cb41f4525a60757b47d3fccf2",
+       "model_id": "1008f86efc174060b577f25c4b3c8cc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +208,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Generating train split:   0%|          | 0/3176 [00:00<?, ? examples/s]"
+       "Generating train split:   0%|          | 0/4124 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -212,7 +222,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Generating validation split:   0%|          | 0/1032 [00:00<?, ? examples/s]"
+       "Generating validation split:   0%|          | 0/500 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -221,12 +231,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db72cc98f16b4844ba7349da2bba4da1",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating test split:   0%|          | 0/1035 [00:00<?, ? examples/s]"
+       "Generating test split:   0%|          | 0/500 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -236,13 +246,153 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset universal_dependencies downloaded and prepared to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_lines/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7. Subsequent calls will reuse this data.\n"
+      "Dataset universal_dependencies downloaded and prepared to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_esl/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ff9549599046b8a1c26721ec6cf132",
+       "model_id": "a893066139ee4fa79244e31eaabcc4ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset universal_dependencies/en_ewt to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "666b3093fe7d42a380e9034c8f7e2ce9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5681f00816714ed2b3e8737b51160dba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/2.51M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a9513a811b9470686b178476354c4bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/321k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e51a46cfee0e409e990b1d2e9530645d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/318k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "811870fea6ee41179b8a1b3b96fd84c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/12543 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/2002 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e2c8eff196d4c4295cfbe6f1a8cd642",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/2077 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset universal_dependencies downloaded and prepared to /users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68282b45d8b44f1296f4955b562c1fd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,45 +405,210 @@
     }
    ],
    "source": [
-    "ud_en_lines = load_dataset('universal_dependencies', 'en_lines')"
+    "ud_en0 = load_dataset('universal_dependencies', en_treebanks[0])\n",
+    "ud_en1 = load_dataset('universal_dependencies', en_treebanks[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "985b9905",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DatasetDict({\n",
-      "    train: Dataset({\n",
-      "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-      "        num_rows: 3176\n",
-      "    })\n",
-      "    validation: Dataset({\n",
-      "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-      "        num_rows: 1032\n",
-      "    })\n",
-      "    test: Dataset({\n",
-      "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-      "        num_rows: 1035\n",
-      "    })\n",
-      "})\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 12543\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 2002\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 2077\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(ud_en_lines)"
+    "ud_en1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "4b934f0f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'idx': 'weblog-juancole.com_juancole_20051126063000_ENG_20051126_063000-0014',\n",
+       " 'text': 'In Suwayrah, Kut Province, two car bombs were discovered before they could be detonated.',\n",
+       " 'tokens': ['In',\n",
+       "  'Suwayrah',\n",
+       "  ',',\n",
+       "  'Kut',\n",
+       "  'Province',\n",
+       "  ',',\n",
+       "  'two',\n",
+       "  'car',\n",
+       "  'bombs',\n",
+       "  'were',\n",
+       "  'discovered',\n",
+       "  'before',\n",
+       "  'they',\n",
+       "  'could',\n",
+       "  'be',\n",
+       "  'detonated',\n",
+       "  '.'],\n",
+       " 'lemmas': ['in',\n",
+       "  'Suwayrah',\n",
+       "  ',',\n",
+       "  'Kut',\n",
+       "  'Province',\n",
+       "  ',',\n",
+       "  'two',\n",
+       "  'car',\n",
+       "  'bombs',\n",
+       "  'be',\n",
+       "  'discover',\n",
+       "  'before',\n",
+       "  'they',\n",
+       "  'could',\n",
+       "  'be',\n",
+       "  'detonate',\n",
+       "  '.'],\n",
+       " 'upos': [2, 10, 1, 10, 10, 1, 3, 0, 0, 17, 16, 5, 11, 17, 17, 16, 1],\n",
+       " 'xpos': ['IN',\n",
+       "  'NNP',\n",
+       "  ',',\n",
+       "  'NNP',\n",
+       "  'NNP',\n",
+       "  ',',\n",
+       "  'CD',\n",
+       "  'NN',\n",
+       "  'NN',\n",
+       "  'VBD',\n",
+       "  'VBN',\n",
+       "  'IN',\n",
+       "  'PRP',\n",
+       "  'MD',\n",
+       "  'VB',\n",
+       "  'VBN',\n",
+       "  '.'],\n",
+       " 'feats': ['None',\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  'None',\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  'None',\n",
+       "  \"{'NumType': 'Card'}\",\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  \"{'Mood': 'Ind', 'Tense': 'Past', 'VerbForm': 'Fin'}\",\n",
+       "  \"{'Tense': 'Past', 'VerbForm': 'Part', 'Voice': 'Pass'}\",\n",
+       "  'None',\n",
+       "  \"{'Case': 'Nom', 'Number': 'Plur', 'Person': '3', 'PronType': 'Prs'}\",\n",
+       "  \"{'VerbForm': 'Fin'}\",\n",
+       "  \"{'VerbForm': 'Inf'}\",\n",
+       "  \"{'Tense': 'Past', 'VerbForm': 'Part', 'Voice': 'Pass'}\",\n",
+       "  'None'],\n",
+       " 'head': ['2',\n",
+       "  '11',\n",
+       "  '2',\n",
+       "  '5',\n",
+       "  '2',\n",
+       "  '11',\n",
+       "  '9',\n",
+       "  '9',\n",
+       "  '11',\n",
+       "  '11',\n",
+       "  '0',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '11',\n",
+       "  '11'],\n",
+       " 'deprel': ['case',\n",
+       "  'obl',\n",
+       "  'punct',\n",
+       "  'compound',\n",
+       "  'appos',\n",
+       "  'punct',\n",
+       "  'nummod',\n",
+       "  'compound',\n",
+       "  'nsubj:pass',\n",
+       "  'aux:pass',\n",
+       "  'root',\n",
+       "  'mark',\n",
+       "  'nsubj:pass',\n",
+       "  'aux',\n",
+       "  'aux:pass',\n",
+       "  'advcl',\n",
+       "  'punct'],\n",
+       " 'deps': [\"[('case', 2)]\",\n",
+       "  \"[('obl:in', 11)]\",\n",
+       "  \"[('punct', 2)]\",\n",
+       "  \"[('compound', 5)]\",\n",
+       "  \"[('appos', 2)]\",\n",
+       "  \"[('punct', 11)]\",\n",
+       "  \"[('nummod', 9)]\",\n",
+       "  \"[('compound', 9)]\",\n",
+       "  \"[('nsubj:pass', 11)]\",\n",
+       "  \"[('aux:pass', 11)]\",\n",
+       "  \"[('root', 0)]\",\n",
+       "  \"[('mark', 16)]\",\n",
+       "  \"[('nsubj:pass', 16)]\",\n",
+       "  \"[('aux', 16)]\",\n",
+       "  \"[('aux:pass', 16)]\",\n",
+       "  \"[('advcl:before', 11)]\",\n",
+       "  \"[('punct', 11)]\"],\n",
+       " 'misc': ['None',\n",
+       "  \"{'SpaceAfter': 'No'}\",\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'SpaceAfter': 'No'}\",\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'SpaceAfter': 'No'}\",\n",
+       "  'None']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ud_en1['train'][13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a300552f",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -423,7 +738,7 @@
        "  'None']}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a300552f",
+   "id": "05119721",
    "metadata": {},
    "outputs": [],
    "source": []
