--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -515,15 +515,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e58452f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.decoder.weight']\n",
+      "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
-    "from transformers import AutoTokenizer\n",
+    "from transformers import AutoTokenizer, XLMRobertaModel\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained('xlm-roberta-base')"
+    "tokenizer = AutoTokenizer.from_pretrained('xlm-roberta-base')\n",
+    "model = XLMRobertaModel.from_pretrained('xlm-roberta-base')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "caa53c31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.config.hidden_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c78623f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
