multi configs and eval

--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "fe81752a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datasets\n",
-    "from datasets import load_dataset, load_from_disk\n",
+    "from datasets import load_dataset, load_from_disk, DatasetDict, concatenate_datasets\n",
     "import numpy as np\n",
     "from scipy.sparse.csgraph import floyd_warshall\n",
     "from transformers import DataCollatorWithPadding\n",
@@ -17,20 +17,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4035b09c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "en_treebanks = ['en_esl', 'en_ewt', 'en_gum', 'en_gumreddit', 'en_lines', 'en_partut', 'en_pronouns', 'en_pud']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1d5ac94c",
+   "execution_count": 17,
+   "id": "546b2de2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_gum/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21b6be26b32243f5b21b9e9c15eaaeac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_lines/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07904f9a1156469a9e2e815fb591068b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_partut/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "796f696ce30a4bedbf970687a497a15f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_pronouns/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cb048df19b24ec8837b92adad1bad81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -41,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "334f908484a240fd8f30db3dc25ef1b4",
+       "model_id": "50e419b50489411e92acdd0befa23171",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +131,272 @@
     }
    ],
    "source": [
-    "dataset = load_dataset('universal_dependencies', en_treebanks[-1])"
+    "config_list = ['en_gum', 'en_lines', 'en_partut', 'en_pronouns', 'en_pud']\n",
+    "dataset = DatasetDict()\n",
+    "\n",
+    "dataset['train'] = load_dataset('universal_dependencies', 'en_ewt', split='train')\n",
+    "dataset['validation'] = load_dataset('universal_dependencies', 'en_ewt', split='validation')\n",
+    "dataset['test'] = load_dataset('universal_dependencies', 'en_ewt', split='test')\n",
+    "\n",
+    "for config in config_list:\n",
+    "    data = load_dataset('universal_dependencies', config)\n",
+    "    keys = data.keys()\n",
+    "    for key in keys:\n",
+    "        dataset[key] = concatenate_datasets([dataset[key], data[key]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4035b09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 21787\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 3974\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "        num_rows: 5440\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1d5ac94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'idx': 'weblog-blogspot.com_aggressivevoicedaily_20060629164800_ENG_20060629_164800-0008',\n",
+       " 'text': 'ALITO filed a dissenting opinion, in which SCALIA and THOMAS joined as to Parts I through III.',\n",
+       " 'tokens': ['ALITO',\n",
+       "  'filed',\n",
+       "  'a',\n",
+       "  'dissenting',\n",
+       "  'opinion',\n",
+       "  ',',\n",
+       "  'in',\n",
+       "  'which',\n",
+       "  'SCALIA',\n",
+       "  'and',\n",
+       "  'THOMAS',\n",
+       "  'joined',\n",
+       "  'as',\n",
+       "  'to',\n",
+       "  'Parts',\n",
+       "  'I',\n",
+       "  'through',\n",
+       "  'III',\n",
+       "  '.'],\n",
+       " 'lemmas': ['ALITO',\n",
+       "  'file',\n",
+       "  'a',\n",
+       "  'dissent',\n",
+       "  'opinion',\n",
+       "  ',',\n",
+       "  'in',\n",
+       "  'which',\n",
+       "  'SCALIA',\n",
+       "  'and',\n",
+       "  'THOMAS',\n",
+       "  'join',\n",
+       "  'as',\n",
+       "  'to',\n",
+       "  'part',\n",
+       "  'i',\n",
+       "  'through',\n",
+       "  'iii',\n",
+       "  '.'],\n",
+       " 'upos': [10, 16, 8, 16, 0, 1, 2, 11, 10, 9, 10, 16, 2, 2, 0, 3, 2, 3, 1],\n",
+       " 'xpos': ['NNP',\n",
+       "  'VBD',\n",
+       "  'DT',\n",
+       "  'VBG',\n",
+       "  'NN',\n",
+       "  ',',\n",
+       "  'IN',\n",
+       "  'WDT',\n",
+       "  'NNP',\n",
+       "  'CC',\n",
+       "  'NNP',\n",
+       "  'VBD',\n",
+       "  'IN',\n",
+       "  'IN',\n",
+       "  'NNS',\n",
+       "  'CD',\n",
+       "  'IN',\n",
+       "  'CD',\n",
+       "  '.'],\n",
+       " 'feats': [\"{'Number': 'Sing'}\",\n",
+       "  \"{'Mood': 'Ind', 'Tense': 'Past', 'VerbForm': 'Fin'}\",\n",
+       "  \"{'Definite': 'Ind', 'PronType': 'Art'}\",\n",
+       "  \"{'VerbForm': 'Ger'}\",\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'PronType': 'Int'}\",\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  'None',\n",
+       "  \"{'Number': 'Sing'}\",\n",
+       "  \"{'Mood': 'Ind', 'Tense': 'Past', 'VerbForm': 'Fin'}\",\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'Number': 'Plur'}\",\n",
+       "  \"{'NumType': 'Card'}\",\n",
+       "  'None',\n",
+       "  \"{'NumType': 'Card'}\",\n",
+       "  'None'],\n",
+       " 'head': ['2',\n",
+       "  '0',\n",
+       "  '5',\n",
+       "  '5',\n",
+       "  '2',\n",
+       "  '5',\n",
+       "  '8',\n",
+       "  '12',\n",
+       "  '12',\n",
+       "  '11',\n",
+       "  '9',\n",
+       "  '5',\n",
+       "  '15',\n",
+       "  '13',\n",
+       "  '12',\n",
+       "  '15',\n",
+       "  '18',\n",
+       "  '16',\n",
+       "  '2'],\n",
+       " 'deprel': ['nsubj',\n",
+       "  'root',\n",
+       "  'det',\n",
+       "  'amod',\n",
+       "  'obj',\n",
+       "  'punct',\n",
+       "  'case',\n",
+       "  'obl',\n",
+       "  'nsubj',\n",
+       "  'cc',\n",
+       "  'conj',\n",
+       "  'acl:relcl',\n",
+       "  'case',\n",
+       "  'fixed',\n",
+       "  'obl',\n",
+       "  'compound',\n",
+       "  'case',\n",
+       "  'nmod',\n",
+       "  'punct'],\n",
+       " 'deps': [\"[('nsubj', 2)]\",\n",
+       "  \"[('root', 0)]\",\n",
+       "  \"[('det', 5)]\",\n",
+       "  \"[('amod', 5)]\",\n",
+       "  \"[('obj', 2), ('obl', 12)]\",\n",
+       "  \"[('punct', 5)]\",\n",
+       "  \"[('case', 8)]\",\n",
+       "  \"[('ref', 5)]\",\n",
+       "  \"[('nsubj', 12)]\",\n",
+       "  \"[('cc', 11)]\",\n",
+       "  \"[('conj:and', 9), ('nsubj', 12)]\",\n",
+       "  \"[('acl:relcl', 5)]\",\n",
+       "  \"[('case', 15)]\",\n",
+       "  \"[('fixed', 13)]\",\n",
+       "  \"[('obl:as_to', 12)]\",\n",
+       "  \"[('compound', 15)]\",\n",
+       "  \"[('case', 18)]\",\n",
+       "  \"[('nmod:through', 16)]\",\n",
+       "  \"[('punct', 2)]\"],\n",
+       " 'misc': ['None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'SpaceAfter': 'No'}\",\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  'None',\n",
+       "  \"{'SpaceAfter': 'No'}\",\n",
+       "  'None']}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['test'][56]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e31c96c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
+       "    num_rows: 16830\n",
+       "})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concatenate_datasets([dataset['train'], data['train']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "688a6307",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'train' in dataset.keys()"
    ]
   },
   {
