spearman for whole dataset and average

--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "fe81752a",
    "metadata": {},
    "outputs": [],
@@ -1396,8 +1396,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9b5ce9dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7c6bf460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8207826816681233"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = stats.spearmanr([1, 2, 3, 4, 5], [5, 6, 7, 8, 7])\n",
+    "res.statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8230d834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 4\n",
+    "s = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "27750a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SignificanceResult(statistic=0.07630700778642936, pvalue=0.6885846533599633)\n",
+      "SignificanceResult(statistic=0.11546162402669634, pvalue=0.5434694510154613)\n",
+      "SignificanceResult(statistic=0.14616240266963293, pvalue=0.44088472389295175)\n",
+      "SignificanceResult(statistic=0.012235817575083427, pvalue=0.9488325740980201)\n",
+      "SignificanceResult(statistic=-0.1474972191323693, pvalue=0.43667732375833057)\n",
+      "SignificanceResult(statistic=0.06251390433815351, pvalue=0.7427795641677637)\n",
+      "SignificanceResult(statistic=-0.22358175750834258, pvalue=0.23495949078364692)\n",
+      "SignificanceResult(statistic=0.10478309232480533, pvalue=0.5815962537668229)\n",
+      "SignificanceResult(statistic=-0.3446051167964405, pvalue=0.06220090340541729)\n",
+      "SignificanceResult(statistic=-0.20978865406006672, pvalue=0.2658489717443996)\n",
+      "SignificanceResult(statistic=0.217797552836485, pvalue=0.24760667595245606)\n",
+      "SignificanceResult(statistic=0.3041156840934371, pvalue=0.10228067785201178)\n",
+      "SignificanceResult(statistic=0.07897664071190211, pvalue=0.6782581459823961)\n",
+      "SignificanceResult(statistic=0.03270300333704116, pvalue=0.8637864591472519)\n",
+      "SignificanceResult(statistic=-0.07408231368186874, pvalue=0.6972322835738773)\n",
+      "SignificanceResult(statistic=0.24093437152391545, pvalue=0.19964260283906532)\n",
+      "SignificanceResult(statistic=-0.4616240266963292, pvalue=0.01023315325971891)\n",
+      "SignificanceResult(statistic=0.15016685205784203, pvalue=0.4283284912394979)\n",
+      "SignificanceResult(statistic=0.14349276974416017, pvalue=0.4493650226110115)\n",
+      "SignificanceResult(statistic=0.2800889877641824, pvalue=0.1338437882052016)\n",
+      "SignificanceResult(statistic=0.06295884315906564, pvalue=0.7410107692024197)\n",
+      "SignificanceResult(statistic=-0.2507230255839822, pvalue=0.18142632424948252)\n",
+      "SignificanceResult(statistic=-0.057174638487208, pvalue=0.7641029227953104)\n",
+      "SignificanceResult(statistic=-0.055394883203559515, pvalue=0.7712493167085641)\n",
+      "SignificanceResult(statistic=0.2671857619577308, pvalue=0.15347789017549382)\n",
+      "SignificanceResult(statistic=0.025583982202447165, pvalue=0.8932470798379044)\n",
+      "SignificanceResult(statistic=0.03270300333704116, pvalue=0.8637864591472519)\n",
+      "SignificanceResult(statistic=0.34371523915461627, pvalue=0.06292401947061307)\n",
+      "SignificanceResult(statistic=-0.010456062291434927, pvalue=0.9562674588297169)\n",
+      "SignificanceResult(statistic=0.32769744160177977, pvalue=0.07709656292801977)\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = np.random.rand(b,s,s)\n",
+    "labels = np.random.rand(b,s,s)\n",
+    "\n",
+    "for s_i in range(s):\n",
+    "    res = stats.spearmanr(preds[0][s_i], labels[0][s_i], axis=1)\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c7fee3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2703003337041157"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "664b2218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.38064516,  1.        ,  0.30055617, -0.08787542,  0.17775306,\n",
+       "       -0.12614016,  0.04382647,  0.13770857, -0.03804227, -0.36462736,\n",
+       "        0.23604004, -0.41935484,  0.00333704, -0.243604  , -0.11813126,\n",
+       "        0.3054505 , -0.04338154,  0.08209121, -0.04382647,  0.13414905,\n",
+       "        0.0028921 ,  0.14660734,  0.08164627,  0.04204672, -0.29477197,\n",
+       "       -0.22669633,  0.08520578, -0.08921023, -0.16974416, -0.33793103,\n",
+       "       -0.17686318,  0.1621802 ,  0.11101224, -0.36462736, -0.06028921,\n",
+       "       -0.04605117, -0.00111235, -0.10077864,  0.10211346, -0.1243604 ,\n",
+       "        0.11590656,  0.13192436, -0.02157953,  0.22358176, -0.14883204,\n",
+       "        0.34638487, -0.17730812,  0.06918799,  0.01802002, -0.05094549,\n",
+       "        0.1461624 ,  0.06206897, -0.05183537,  0.00912125, -0.2080089 ,\n",
+       "        0.02335929, -0.08342603,  0.18086763, -0.0625139 , -0.07007786])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.statistic[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1f92a8b",
    "metadata": {},
    "outputs": [],
    "source": []
