--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "from scipy.sparse.csgraph import floyd_warshall\n",
     "from transformers import DataCollatorWithPadding\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader\n",
+    "from scipy.sparse.csgraph import minimum_spanning_tree as mst"
    ]
   },
   {
@@ -1545,8 +1546,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e1f92a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 3],\n",
+       "       [0, 0, 2, 5],\n",
+       "       [0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.sparse import csr_matrix\n",
+    "X = csr_matrix([[0, 8, 0, 3],\n",
+    "                [0, 0, 2, 5],\n",
+    "                [0, 0, 0, 6],\n",
+    "                [0, 0, 0, 0]])\n",
+    "\n",
+    "Tcsr = mst(X)\n",
+    "Tcsr.toarray().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9599021b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 3],\n",
+       "       [0, 0, 2, 5],\n",
+       "       [0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = [[0, 8, 0, 3],\n",
+    "    [0, 0, 2, 5],\n",
+    "    [0, 0, 0, 6],\n",
+    "    [0, 0, 0, 0]]\n",
+    "\n",
+    "Tcsr = mst(X)\n",
+    "Tcsr.toarray().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00b8c886",
    "metadata": {},
    "outputs": [],
    "source": []
