base model probe. target language

--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -18,6 +18,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "127ca6c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_list = ['en_gum', 'en_lines', 'en_partut', 'en_pronouns', 'en_pud']\n",
+    "dataset = DatasetDict()\n",
+    "\n",
+    "dataset['train'] = load_dataset('universal_dependencies', 'en_ewt', split='train')\n",
+    "dataset['validation'] = load_dataset('universal_dependencies', 'en_ewt', split='validation')\n",
+    "dataset['test'] = load_dataset('universal_dependencies', 'en_ewt', split='test')\n",
+    "\n",
+    "for config in config_list:\n",
+    "    data = load_dataset('universal_dependencies', config)\n",
+    "    keys = data.keys()\n",
+    "    for key in keys:\n",
+    "        dataset[key] = concatenate_datasets([dataset[key], data[key]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "546b2de2",
    "metadata": {},
@@ -132,7 +153,7 @@
     }
    ],
    "source": [
-    "config_list = ['en_gum', 'en_lines', 'en_partut', 'en_pronouns', 'en_pud']\n",
+    "config_list = ['is_icepahc', 'is_pud']\n",
     "dataset = DatasetDict()\n",
     "\n",
     "dataset['train'] = load_dataset('universal_dependencies', 'en_ewt', split='train')\n",
