--- a/experiments/notebooks/parse_trees.ipynb
+++ b/experiments/notebooks/parse_trees.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "546b2de2",
    "metadata": {},
    "outputs": [
@@ -47,129 +47,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_ewt/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_gum/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/is_icepahc/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/is_icepahc/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n",
+      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/is_icepahc/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21b6be26b32243f5b21b9e9c15eaaeac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_lines/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07904f9a1156469a9e2e815fb591068b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_partut/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "796f696ce30a4bedbf970687a497a15f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_pronouns/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cb048df19b24ec8837b92adad1bad81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset universal_dependencies (/users/ujan/.cache/huggingface/datasets/universal_dependencies/en_pud/2.7.0/1ac001f0e8a0021f19388e810c94599f3ac13cc45d6b5b8c69f7847b2188bdf7)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50e419b50489411e92acdd0befa23171",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "config_list = ['is_icepahc', 'is_pud']\n",
     "dataset = DatasetDict()\n",
     "\n",
-    "dataset['train'] = load_dataset('universal_dependencies', 'en_ewt', split='train')\n",
-    "dataset['validation'] = load_dataset('universal_dependencies', 'en_ewt', split='validation')\n",
-    "dataset['test'] = load_dataset('universal_dependencies', 'en_ewt', split='test')\n",
-    "\n",
-    "for config in config_list:\n",
-    "    data = load_dataset('universal_dependencies', config)\n",
-    "    keys = data.keys()\n",
-    "    for key in keys:\n",
-    "        dataset[key] = concatenate_datasets([dataset[key], data[key]])"
+    "dataset['train'] = load_dataset('universal_dependencies', 'is_icepahc', split='train')\n",
+    "dataset['validation'] = load_dataset('universal_dependencies', 'is_icepahc', split='validation')\n",
+    "dataset['test'] = load_dataset('universal_dependencies', 'is_icepahc', split='test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "4035b09c",
    "metadata": {},
    "outputs": [
@@ -179,20 +74,20 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-       "        num_rows: 21787\n",
+       "        num_rows: 34007\n",
        "    })\n",
        "    validation: Dataset({\n",
        "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-       "        num_rows: 3974\n",
+       "        num_rows: 4865\n",
        "    })\n",
        "    test: Dataset({\n",
        "        features: ['idx', 'text', 'tokens', 'lemmas', 'upos', 'xpos', 'feats', 'head', 'deprel', 'deps', 'misc'],\n",
-       "        num_rows: 5440\n",
+       "        num_rows: 5157\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,154 +98,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "1d5ac94c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'idx': 'weblog-blogspot.com_aggressivevoicedaily_20060629164800_ENG_20060629_164800-0008',\n",
-       " 'text': 'ALITO filed a dissenting opinion, in which SCALIA and THOMAS joined as to Parts I through III.',\n",
-       " 'tokens': ['ALITO',\n",
-       "  'filed',\n",
-       "  'a',\n",
-       "  'dissenting',\n",
-       "  'opinion',\n",
-       "  ',',\n",
-       "  'in',\n",
-       "  'which',\n",
-       "  'SCALIA',\n",
-       "  'and',\n",
-       "  'THOMAS',\n",
-       "  'joined',\n",
-       "  'as',\n",
-       "  'to',\n",
-       "  'Parts',\n",
-       "  'I',\n",
-       "  'through',\n",
-       "  'III',\n",
+       "{'idx': '1150.HOMILIUBOK.REL-SER,57.57',\n",
+       " 'text': 'Svo hafa og Guðs englar glíking guðdómsbirtinnar í eðli sínu.',\n",
+       " 'tokens': ['Svo',\n",
+       "  'hafa',\n",
+       "  'og',\n",
+       "  'Guðs',\n",
+       "  'englar',\n",
+       "  'glíking',\n",
+       "  'guðdómsbirtinnar',\n",
+       "  'í',\n",
+       "  'eðli',\n",
+       "  'sínu',\n",
        "  '.'],\n",
-       " 'lemmas': ['ALITO',\n",
-       "  'file',\n",
-       "  'a',\n",
-       "  'dissent',\n",
-       "  'opinion',\n",
-       "  ',',\n",
-       "  'in',\n",
-       "  'which',\n",
-       "  'SCALIA',\n",
-       "  'and',\n",
-       "  'THOMAS',\n",
-       "  'join',\n",
-       "  'as',\n",
-       "  'to',\n",
-       "  'part',\n",
-       "  'i',\n",
-       "  'through',\n",
-       "  'iii',\n",
+       " 'lemmas': ['svo',\n",
+       "  'hafa',\n",
+       "  'og',\n",
+       "  'guð',\n",
+       "  'engill',\n",
+       "  'glíking',\n",
+       "  'guðdómsbirta',\n",
+       "  'í',\n",
+       "  'eðli',\n",
+       "  'sinn',\n",
        "  '.'],\n",
-       " 'upos': [10, 16, 8, 16, 0, 1, 2, 11, 10, 9, 10, 16, 2, 2, 0, 3, 2, 3, 1],\n",
-       " 'xpos': ['NNP',\n",
-       "  'VBD',\n",
-       "  'DT',\n",
-       "  'VBG',\n",
-       "  'NN',\n",
-       "  ',',\n",
-       "  'IN',\n",
-       "  'WDT',\n",
-       "  'NNP',\n",
-       "  'CC',\n",
-       "  'NNP',\n",
-       "  'VBD',\n",
-       "  'IN',\n",
-       "  'IN',\n",
-       "  'NNS',\n",
-       "  'CD',\n",
-       "  'IN',\n",
-       "  'CD',\n",
+       " 'upos': [14, 16, 14, 10, 0, 0, 0, 2, 0, 11, 1],\n",
+       " 'xpos': ['ADV',\n",
+       "  'HVPI',\n",
+       "  'ALSO',\n",
+       "  'NPR-G',\n",
+       "  'NS-N',\n",
+       "  'N-A',\n",
+       "  'N-G',\n",
+       "  'P',\n",
+       "  'N-D',\n",
+       "  'PRO-D',\n",
        "  '.'],\n",
-       " 'feats': [\"{'Number': 'Sing'}\",\n",
-       "  \"{'Mood': 'Ind', 'Tense': 'Past', 'VerbForm': 'Fin'}\",\n",
-       "  \"{'Definite': 'Ind', 'PronType': 'Art'}\",\n",
-       "  \"{'VerbForm': 'Ger'}\",\n",
-       "  \"{'Number': 'Sing'}\",\n",
+       " 'feats': ['None',\n",
+       "  \"{'Mood': 'Ind', 'Number': 'Plur', 'Person': '3', 'Tense': 'Pres', 'VerbForm': 'Fin', 'Voice': 'Act'}\",\n",
        "  'None',\n",
+       "  \"{'Case': 'Gen', 'Definite': 'Ind', 'Gender': 'Masc', 'Number': 'Sing'}\",\n",
+       "  \"{'Mood': 'Ind', 'Number': 'Sing', 'Person': '3', 'Tense': 'Pres', 'VerbForm': 'Fin', 'Voice': 'Act'}\",\n",
+       "  \"{'Case': 'Acc', 'Definite': 'Ind', 'Gender': 'Masc', 'Number': 'Sing'}\",\n",
+       "  \"{'Case': 'Gen', 'Definite': 'Def', 'Gender': 'Fem', 'Number': 'Sing'}\",\n",
        "  'None',\n",
-       "  \"{'PronType': 'Int'}\",\n",
-       "  \"{'Number': 'Sing'}\",\n",
-       "  'None',\n",
-       "  \"{'Number': 'Sing'}\",\n",
-       "  \"{'Mood': 'Ind', 'Tense': 'Past', 'VerbForm': 'Fin'}\",\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  \"{'Number': 'Plur'}\",\n",
-       "  \"{'NumType': 'Card'}\",\n",
-       "  'None',\n",
-       "  \"{'NumType': 'Card'}\",\n",
+       "  \"{'Case': 'Dat', 'Definite': 'Ind', 'Gender': 'Neut', 'Number': 'Sing'}\",\n",
+       "  \"{'Case': 'Dat', 'Gender': 'Neut', 'Number': 'Sing', 'PronType': 'Prs'}\",\n",
        "  'None'],\n",
-       " 'head': ['2',\n",
-       "  '0',\n",
-       "  '5',\n",
-       "  '5',\n",
-       "  '2',\n",
-       "  '5',\n",
-       "  '8',\n",
-       "  '12',\n",
-       "  '12',\n",
-       "  '11',\n",
-       "  '9',\n",
-       "  '5',\n",
-       "  '15',\n",
-       "  '13',\n",
-       "  '12',\n",
-       "  '15',\n",
-       "  '18',\n",
-       "  '16',\n",
-       "  '2'],\n",
-       " 'deprel': ['nsubj',\n",
+       " 'head': ['2', '0', '2', '5', '2', '2', '6', '9', '2', '9', '10'],\n",
+       " 'deprel': ['advmod',\n",
        "  'root',\n",
-       "  'det',\n",
-       "  'amod',\n",
-       "  'obj',\n",
-       "  'punct',\n",
-       "  'case',\n",
-       "  'obl',\n",
+       "  'advmod',\n",
+       "  'nmod:poss',\n",
        "  'nsubj',\n",
-       "  'cc',\n",
-       "  'conj',\n",
-       "  'acl:relcl',\n",
+       "  'obj',\n",
+       "  'nmod:poss',\n",
        "  'case',\n",
-       "  'fixed',\n",
        "  'obl',\n",
-       "  'compound',\n",
-       "  'case',\n",
-       "  'nmod',\n",
+       "  'nmod:poss',\n",
        "  'punct'],\n",
-       " 'deps': [\"[('nsubj', 2)]\",\n",
-       "  \"[('root', 0)]\",\n",
-       "  \"[('det', 5)]\",\n",
-       "  \"[('amod', 5)]\",\n",
-       "  \"[('obj', 2), ('obl', 12)]\",\n",
-       "  \"[('punct', 5)]\",\n",
-       "  \"[('case', 8)]\",\n",
-       "  \"[('ref', 5)]\",\n",
-       "  \"[('nsubj', 12)]\",\n",
-       "  \"[('cc', 11)]\",\n",
-       "  \"[('conj:and', 9), ('nsubj', 12)]\",\n",
-       "  \"[('acl:relcl', 5)]\",\n",
-       "  \"[('case', 15)]\",\n",
-       "  \"[('fixed', 13)]\",\n",
-       "  \"[('obl:as_to', 12)]\",\n",
-       "  \"[('compound', 15)]\",\n",
-       "  \"[('case', 18)]\",\n",
-       "  \"[('nmod:through', 16)]\",\n",
-       "  \"[('punct', 2)]\"],\n",
-       " 'misc': ['None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  \"{'SpaceAfter': 'No'}\",\n",
+       " 'deps': ['None',\n",
        "  'None',\n",
        "  'None',\n",
        "  'None',\n",
@@ -360,20 +174,27 @@
        "  'None',\n",
        "  'None',\n",
        "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  \"{'SpaceAfter': 'No'}\",\n",
-       "  'None']}"
+       "  'None'],\n",
+       " 'misc': [\"{'IFD_tag': 'aa'}\",\n",
+       "  \"{'IFD_tag': 'sfg3fn'}\",\n",
+       "  \"{'IFD_tag': 'c'}\",\n",
+       "  \"{'IFD_tag': 'nkee-s'}\",\n",
+       "  \"{'IFD_tag': 'sfg3en'}\",\n",
+       "  \"{'IFD_tag': 'nkeo'}\",\n",
+       "  \"{'IFD_tag': 'nveeg'}\",\n",
+       "  \"{'IFD_tag': 'aþ'}\",\n",
+       "  \"{'IFD_tag': 'nheþ'}\",\n",
+       "  \"{'IFD_tag': 'feheþ', 'SpaceAfter': 'No'}\",\n",
+       "  \"{'IFD_tag': '.'}\"]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset['test'][56]"
+    "dataset['train'][56]"
    ]
   },
   {
